<resources>
    <string name="app_name">PAM1 - Atividade-Layout</string>
    <string name="gasto">Tipos de gastos:</string>
    <string name="valor">Valor:</string>
    <string name="data">Data:</string>
    <string name="descricao">Descrição:</string>
    <string name="local">Local:</string>
    <string name="salvar">Salvar</string>
    <string name="selecione">Selecione</string>
    <string name="data1">Data1</string>
    <string name="data2">Data2</string>

</resources>
